fix: header style on mobile

--- a/assets/scss/scss_assets/layout/_header.scss
+++ b/assets/scss/scss_assets/layout/_header.scss
@@ -19,7 +19,7 @@ header {
     line-height: 1.125em;
     transition: 0.3s;
     @media (max-width: $laptop) {
-      font-size: 28px;
+      font-size: 20px;
     }
 
     &:hover {
